# getting_started_with_mcp

./: .gitignore  README.md  pyproject.toml
ai_sticky_notes/: main.py  notes.txt
blaxel_quickstart/test/src/: embeddings.py  llm.py  memory.py  notes.txt  server.py  vector_store.py  web_ingest.py
data/chroma/: chroma.sqlite3
filesystem_mcp/: main.py  pyproject.toml
learn_tools/: langgraph_project_1.ipynb  learning_langchain.ipynb  learning_langgraph.ipynb  research_notes.txt  simple_rag.ipynb
learn_tools/langchain/: learning_langchain.ipynb  simple_rag.ipynb
learn_tools/langgraph/: HITL.ipynb  basic_chat_bot.ipynb  hitl.excalidraw  langgraph_project_1.ipynb  learning_langgraph.ipynb
mcp_project_001/: client.py  main.py  math.py  pyproject.toml  requirements.txt  weather.py
mcp_project_001/langsmith/: README.md  agent.py  monitoring.ipynb
rag_projects/research_assistant/: research_rag.ipynb
